--- a/templates/snuba-consumer.yaml
+++ b/templates/snuba-consumer.yaml
@@ -17,6 +17,7 @@ spec:
       containers:
       - name: snuba-consumer
         image: getsentry/snuba:latest
+        imagePullPolicy: Always
         ports:
         - containerPort: 1218
         args: ["consumer", "--auto-offset-reset=latest", "--max-batch-time-ms","750"]
@@ -26,7 +27,7 @@ spec:
         - name: CLICKHOUSE_HOST
           value: clickhouse
         - name: CLICKHOUSE_PORT
-          value: "8123"
+          value: "9000"
         - name: DEFAULT_BROKERS
           value: sentry-kafka:9092
         - name: REDIS_HOST
