--- a/templates/snuba-replacer.yaml
+++ b/templates/snuba-replacer.yaml
@@ -17,6 +17,7 @@ spec:
       containers:
       - name: snuba-replacer
         image: getsentry/snuba:latest
+        imagePullPolicy: Always
         args: ["replacer", "--auto-offset-reset=latest", "--max-batch-size","3"]
         ports:
         - containerPort: 1218
@@ -26,7 +27,7 @@ spec:
         - name: CLICKHOUSE_HOST
           value: clickhouse
         - name: CLICKHOUSE_PORT
-          value: "8123"
+          value: "9000"
         - name: DEFAULT_BROKERS
           value: sentry-kafka:9092
         - name: REDIS_HOST
